[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "wallets"
description = "Application to get ballances and prices for a list of wallets."
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Mauro Bruni", email = "maumarbru@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "rich == 13.7",
  "defyes @ git+https://github.com/karpatkey/defyes.git@719a2d3",
  "pyyaml >= 6.0",
  "typer == 0.9",
]

[project.scripts]
wallets = "wallets.cli:app"

[project.urls]
Issues = "https://github.com/maurob/wallets/issues"
Source = "https://github.com/maurob/wallets"
Homepage = "https://github.com/maurob/wallets"

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.build.targets.wheel]
packages = [
  "src/wallets",
]
exclude = [
  "src/wallets/tests",
]

# Linter configuruation.
[tool.isort]
profile = "black"
atomic = true
extend_skip_glob = "migrations,scripts"
line_length = 120

[tool.pytest.ini_options]
python_files = "test_*.py tests.py"

[tool.black]
line_length = 120

[tool.flake8]
extend-exclude = [
    '.git',
    '__pycache__',
]
extend-ignore = [
    'W503',  # Line break occurred before a binary operator. Using just W504 instead.
]
max-line-length = 120
max-complexity = 18
# Specify the list of error codes you wish Flake8 to report.
select = ['B', 'C', 'E', 'F', 'W', 'T4', 'B9']
# Parallelism
jobs = 4
